# exercises

./: AlarmDateButton.qml  Button.qml  CMakeLists.txt  Clock.qml  DateTxt.qml  DigitalClock.qml  Head.qml  SetButton.qml  main.qml
Clock/: AlarmAnalogClock.qml  AlarmDateButton.qml  AlarmHourSet.qml  AlarmList.qml  AlarmListComponent.qml  AlarmSetDate.qml  AlarmSetDateArrow.qml  AlarmSetHour.qml  AnalogClock.qml  Back.qml  Button.qml  CMakeLists.txt  ClickableElement.qml  Clock.qml  DateTxt.qml  DeleteButton.qml  DigitalClock.qml  Head.qml  NextPageButton.qml  NoAlarmSign.qml  SetAlarm.qml  SetArrow.qml  SetButton.qml  TimerCD.qml  TimerCircle.qml  TimerSet.qml  ViewAlarmDateSet.qml  ViewAlarmList.qml  ViewAlarmSet.qml  ViewDeveClock.qml  ViewTimerCD.qml  ViewTimerSet.qml  alarm.cpp  alarm.h  boolcontrols.cpp  boolcontrols.h  date.cpp  date.h  main.cpp  main.qml  (+3 more)
Data/: main.cpp
Date/: CMakeLists.txt  main.cpp
Media/: CMakeLists.txt  main.cpp
Mediana/: CMakeLists.txt  main.cpp
Parole/: main.cpp
PhoneBook/: CMakeLists.txt  contact.cpp  filter.cpp  filter.h  main.cpp  phoneBook.cpp  phoneBook.h
